--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "version": "1.0.0",
     "description": "creacion del node",
     "main": "index.js",
+    "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon index.js"
     },
     "author": "Nicolas Mantilla Gelves",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^3.1.10"
+    }
 }
